hard-gists/2ec85f1f8fe0d4f44b6f/run.log
=== Docker Run Log for 2ec85f1f8fe0d4f44b6f ===
Started at: Mi 29. Okt 13:33:14 CET 2025

[2025-10-29 13:33:14] START: Running container for 2ec85f1f8fe0d4f44b6f
[2025-10-29 13:33:14] SUCCESS: Container 9aa84a06ac35adbdf08c121048da9c9e1d259adf54b5e3be6b5d021bc096857d started for 2ec85f1f8fe0d4f44b6f
=== Container logs for 2ec85f1f8fe0d4f44b6f ===
  File "/snippet.py", line 33
    print "KeePass Linux Clipboard Workaround"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2ec85f1f8fe0d4f44b6f ===
[2025-10-29 13:33:16] INFO: Container 9aa84a06ac35adbdf08c121048da9c9e1d259adf54b5e3be6b5d021bc096857d has stopped
